
 - the customer is no longer asked to select a shipper and shipping is
   set to zero for orders where all products have zero weight.
   https://rt4.develop-help.com/Ticket/Display.html?id=1328

 - template engine: template tags implemented as a literal were no
   replaced when that literal was false. (4a446ac3)
   https://rt4.develop-help.com/Ticket/Display.html?id=1342

Enhancements:

 - automatic image insertion can now be disabled globally or on a
   per-article basis.
   https://rt4.develop-help.com/Ticket/Display.html?id=1331

 - templating re-re-work:
   - still backward compatible
   - new, faster, more regular processing internal to tags:
     - variables supplied by code, similarly to TT, Mason
     - macro definitions
     - call macros or files with parameters and localized variables
   - integration into BSE itself still limited, but one step at a
     time.

 - briefly documented bsexlsprod.pl (site/docs/bse_import.pod)

 - bsexlsprod.pl can now update article tags

 - bsexlsprod.pl can now update tiered pricing

 - make the eimage variable available on the admin/image_edit template
   and use it to display a thumbnail.
   https://rt4.develop-help.com/Ticket/Display.html?id=1290

 - add the Courier::FixedAU shipping driver.

Templates:

 - admin/order_detail.tmpl - the product tag now uses tag_article as
   it should.

 - admin/subscr/list - isubscription is now an object tag, giving
   access to the is_removable method
   https://rt4.develop-help.com/Ticket/Display.html?id=1323

 - admin/subscr/edit, admin/subscr/detail - subscription is now an
   object tag

BSE 0.21 - 07 Mar 2012
========

 - Squirrel::Template has largely been rewritten performing a parsing
   then a processing step rather than doing many, many s/// over the
   template text.

 - verbose output of generate.pl is now based on the template
   admin/generate.tmpl

 - add the referer tag to all dynamic pages

 - added [undeletable articles] to bse.cfg as a supplement to